# fecaf_controle_estoque

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/flaskrc/: __init__.py
src/flaskrc/commons/dtos/: MovimentoDTO.py  ProdutoDTO.py  TipoMovimentacaoDTO.py  UsuarioDTO.py
src/flaskrc/commons/enums/: IndicadorAtivoEnum.py  IndicadorMovimentoEnum.py
src/flaskrc/commons/exceptions/: NegocioError.py  RollbackError.py  SQLError.py
src/flaskrc/commons/mappers/: ModelDictMapper.py  ModelMapperGenerico.py  MovimentacaoMapper.py  MovimentoDTOMapper.py  ProdutoDTOMapper.py  ProdutoMapper.py  TipoMovimentacaoMapper.py  TipoMovimentoDTOMapper.py  UsuarioDTOMapper.py  UsuarioMapper.py
src/flaskrc/config/: DatabaseConfig.py  FlaskConfig.py  FlaskLoginConfig.py  SQLAlchemyConfig.py  schema.sql
src/flaskrc/controllers/: AutenticacaoController.py  ControllerBase.py  HomeController.py  MovimentacaoController.py  ProdutoController.py  TipoMovimentacaoController.py  UsuarioController.py
src/flaskrc/models/: GrupoAcesso.py  Movimentacao.py  Produto.py  TipoMovimentacao.py  Usuario.py  UsuarioAcessoDetalhe.py  __init__.py
src/flaskrc/repositories/: MovimentacaoRepository.py  ProdutoRepository.py  TipoMovimentacaoRepository.py  UsuarioRepository.py
src/flaskrc/static/: autenticar-usuario.css  base.css  cadastrar-produto.css  consultar-movimentacao.css  consultar-produto.css  global.css  index.css  registrar-movimentacao.css  sidebar.css
src/flaskrc/templates/: autenticar-usuario.html  base-autenticacao.html  base.html  cadastrar-produto.html  consultar-movimentacao.html  consultar-produto.html  index.html  registrar-movimentacao.html
(+32 files in other folders)
